--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-title: OS: Car
+title: "OS: Car"
 description: Open Skoltech Car project website
 show_downloads: "false"
